--- a/src/components/Collapse/Collapse.module.css
+++ b/src/components/Collapse/Collapse.module.css
@@ -47,3 +47,10 @@
     width:100%;
 }
 
+@media (max-width:767px){
+  .collapse_container{
+    width:90%;
+    margin: 0 auto 20px auto;
+    box-sizing:border-box;
+  } 
+}
